--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   ],
   "main": "index.js",
   "scripts": {
-    "coverage": "istanbul cover node_modules/.bin/_mocha -- --reporter spec",
-    "test": "mocha --reporter spec",
-    "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec"
+    "coverage": "istanbul cover node_modules/.bin/_mocha",
+    "test": "mocha",
+    "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "concat-stream": "1.4.x",
     "istanbul": "0.3.x",
-    "mocha": "2.0.x",
-    "pre-commit": "0.0.x"
+    "mocha": "2.1.x",
+    "pre-commit": "1.0.x"
   }
 }
