--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "license": "MIT",
   "dependencies": {
     "pumpify": "1.3.x",
-    "split": "0.3.x",
+    "split2": "0.2.x",
     "through2": "0.6.x"
   },
   "devDependencies": {
     "concat-stream": "1.4.x",
     "istanbul": "0.3.x",
-    "mocha": "2.1.x",
+    "mocha": "2.2.x",
     "pre-commit": "1.0.x"
   }
 }
