--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   ],
   "main": "index.js",
   "scripts": {
-    "coverage": "istanbul cover node_modules/.bin/_mocha",
+    "coverage": "istanbul cover _mocha",
     "test": "mocha",
-    "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly"
+    "test-travis": "istanbul cover _mocha --report lcovonly"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "concat-stream": "1.5.x",
     "istanbul": "0.3.x",
-    "mocha": "2.2.x",
-    "pre-commit": "1.0.x"
+    "mocha": "2.3.x",
+    "pre-commit": "1.1.x"
   }
 }
