--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "license": "MIT",
   "dependencies": {
     "pumpify": "1.3.x",
-    "split2": "~2.1.0",
+    "split2": "2.1.x",
     "through2": "2.0.x"
   },
   "devDependencies": {
     "concat-stream": "1.5.x",
     "istanbul": "0.4.x",
-    "mocha": "~3.1.2",
+    "mocha": "3.1.x",
     "pre-commit": "1.1.x"
   }
 }
