--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "author": "Luigi Pinca",
   "license": "MIT",
   "dependencies": {
-    "pumpify": "1.3.x",
-    "split2": "2.1.x",
-    "through2": "2.0.x"
+    "pumpify": "~1.3.5",
+    "split2": "~2.1.0",
+    "through2": "~2.0.1"
   },
   "devDependencies": {
-    "concat-stream": "1.5.x",
-    "istanbul": "0.4.x",
+    "concat-stream": "~1.5.2",
+    "istanbul": "~0.4.5",
     "mocha": "~3.2.0",
-    "pre-commit": "1.1.x"
+    "pre-commit": "~1.1.3"
   }
 }
