--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,5 @@ language: node_js
 node_js:
   - "12"
   - "10"
-  - "8"
-script:
-  - "npm run test-travis"
-after_script:
-  - "npm install coveralls@3 && cat coverage/lcov.info | coveralls"
-notifications:
-  irc:
-    channels:
-      - "irc.freenode.org#primus"
-    on_success: change
-    on_failure: change
+after_success:
+  - c8 report --reporter=text-lcov | coveralls
