--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "c8 --reporter=html --reporter=text mocha"
+    "test": "c8 --reporter=lcov --reporter=text mocha"
   },
   "repository": {
     "type": "git",
